tests/baselines/reference/externSyntax.errors.txt
externSyntax.ts(2,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
externSyntax.ts(8,20): error TS1183: An implementation cannot be declared in ambient contexts.


==== externSyntax.ts (2 errors) ====
    declare var v;
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class D {
            public p;
        }
        export class C {
            public f();
            public g() { } // error body
                       ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
    }
    
    
    
    